--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <script src="script.js"></script>
+    <script src="game.js"></script>
+    <script src="millioner.js"></script>
     <title>js level 1</title>
 </head>
 <body>
