--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <script src="script.js"></script>
-    <script src="game.js"></script>
-    <script src="millioner.js"></script>
-    <title>js level 1</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <title>Chess</title>
 </head>
 <body>
-    
+	<button class="fill">Fill board</button>
+	<button class="fill-figure">Fill Figure</button>
+    <script type="text/javascript" src="script.js"></script>
 </body>
 </html>
