--- a/index.html
+++ b/index.html
@@ -1,15 +1,23 @@
-<!DOCTYPE html>
+
+<!doctype html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <title>Chess</title>
+	<meta charset="utf-8">
+	<title> Image Gallery </title>
+	<link rel="stylesheet" href="style.css" />
+	<script src="script.js"></script>
 </head>
 <body>
-	<button class="fill">Fill board</button>
-	<button class="fill-figure">Fill Figure</button>
-    <script type="text/javascript" src="script.js"></script>
+	<div class="big_picture">
+		<div class="prev">&lt;</div>
+		<div id="big_picture" data-curent="1"><img id="11" src="img/gallery/big/1.jpg"></div>
+		<div class="next">&gt;</div>
+	</div>
+	<div id="gallery"></div>
+	<div class="basket">
+		<span>Корзина</span>
+		<ul id="list"></ul>
+		<span>Сумма: <strong id="price">0</strong></span>
+	</div>
 </body>
 </html>
